--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1590,3 +1590,6 @@ version 8.32.1 (2021-01-11)
       Updates ErrorObject instances in the SDK to comply with the new legal
       char checks (iss #284).
     * Factors common grant_type parse login into a static GrantType.ensure.
+
+version 8.32.2 (2021-01-12)
+    * Updates CIBARequest to require one identity hint.
