--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1593,3 +1593,6 @@ version 8.32.1 (2021-01-11)
 
 version 8.32.2 (2021-01-12)
     * Updates CIBARequest to require one identity hint.
+
+version 8.32.3 (2021-01-13)
+    * Removes double quotes from ParseException messages (iss #336).
