--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1596,3 +1596,7 @@ version 8.32.2 (2021-01-12)
 
 version 8.32.3 (2021-01-13)
     * Removes double quotes from ParseException messages (iss #336).
+
+version 8.33 (2021-01-15)
+    * Makes Secret.equals comparison with another Secret based on constant time
+      matching of their SHA-256 values.
