--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1605,3 +1605,8 @@ version 8.33 (2021-01-15)
     * Updates ClientAuthenticationVerifier to ignore erased Secrets for
       client_secret_jwt verification.
     * Adds ListUtils.
+
+version 8.33.1 (2021-01-23)
+    * Fixes bug in AuthorizationGrant.parse which caused output of an error
+      object message with illegal chars according to RFC 6749, section 5.2 (iss
+      #338).
