--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1637,3 +1637,6 @@ version 8.35.1 (2021-01-29)
     * AuthorizationResponse.toHTTPRequest must support
       response_mode=form_post.jwt (iss #343).
     * Cleans up code (auto).
+
+version 8.36 (2021-01-29)
+    * Adds CollectionUtils.contains static method.
