Updates to OpenSAML 3.4.6

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1647,3 +1647,4 @@ version 9.0 (2021-02-01)
     * Adds new safe JSONObjectUtils.toJSONObject(com.nimbusds.jwt.JWTClaimsSet)
       method for obtaining a net.minidev.json.JSONObject representation of a
       JWT claims set.
+    * Updates to OpenSAML 3.4.6.
