--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1653,6 +1653,8 @@ version 9.0 (2021-02-01)
 
 version 9.0.1 (2021-02-02)
     * Updates JSONObjectUtils.getJSONObject to handle generic
-      Map<String,Object> representations.
+      Map<String, ?> representations.
     * Updates JSONObjectUtils.getJSONArray to handle generic List<?>
+      representations.
+    * Updates JSONArrayUtils.toJSONObjectList to handle generic Map<String, ?>
       representations.
