--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1665,4 +1665,6 @@ version 9.1 (2021-02-02)
     * Upgrades to Nimbus JOSE+JWT 9.5.
 
 version 9.2 (2021-02-22)
+    * AuthorizationRequest.parse with a parameter included more than once, save
+      for "resource", must throw ParseException (iss #345).
     * Adds MultivaluedMapUtils.getKeysWithMoreThanOneValue method.
