--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1269,3 +1269,6 @@ version 7.1.2 (2021-03-15)
     * Catches unexpected exceptions in JSONUtils.parseJSON(String) into
       ParseException, see
       https://github.com/netplex/json-smart-v1/issues/7 (iss #347).
+
+version 7.1.3 (2021-03-22)
+    * Repeats failed 7.1.2 release to Maven Central.
