Updates change log for 9.2.4 after PR for iss #350

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1684,3 +1684,7 @@ version 9.2.2 (2021-03-04)
 version 9.2.3 (2021-03-19)
     * Updates default_acr_values output in OIDCClientMetadata.toJSONObject to
       not rely on JSONAware.
+
+version 9.2.4 (2021-03-23)
+    * Updates the IDTokenVerifier to not reject an ID token with an "iat"
+      (Issued At) claim when it is equal to the current time (iss #350).
