--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1699,3 +1699,4 @@ version 9.3.1 (2021-04-07)
       SAML2AssertionValidator, closes potential vulnerability (iss #356).
     * Bumps JSON Smart to [1.3.2,2.4.2], note CVE-2021-27568 worked around in
       9.2.1 / iss #347 (iss #355).
+    * Bumps Nimbus JOSE+JWT to 9.8.1.
