--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1700,3 +1700,6 @@ version 9.3.1 (2021-04-07)
     * Bumps JSON Smart to [1.3.2,2.4.2], note CVE-2021-27568 worked around in
       9.2.1 / iss #347 (iss #355).
     * Bumps Nimbus JOSE+JWT to 9.8.1.
+
+version 9.3.2 (2021-04-12)
+    * Bumps Nimbus LangTag to 1.5.
