--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1649,4 +1649,5 @@ version 8.36.1 (2021-03-15)
 version 8.36.2 (2021-04-15)
     * Disables access to external entities in XML parsing in
       SAML2AssertionValidator, closes potential vulnerability (iss #356).
-
+    * Bumps JSON Smart to [1.3.2,2.4.2], note CVE-2021-27568 worked around in
+      9.2.1 / iss #347 (iss #355).
