--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1651,3 +1651,5 @@ version 8.36.2 (2021-04-15)
       SAML2AssertionValidator, closes potential vulnerability (iss #356).
     * Bumps JSON Smart to [1.3.2,2.4.2], note CVE-2021-27568 worked around in
       9.2.1 / iss #347 (iss #355).
+    * Updates pom.xml to include javax.servlet 4.0 API in OSGI manifest (iss
+      #354).
