--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1714,3 +1714,7 @@ version 9.4 (2021-04-21)
       according to RFC 7636.
     * Updates Bearer token error realm parsing to prevent stack overflow
       exceptions with very long strings (iss #359).
+
+version 9.4.1 (2021-04-26)
+    * Bumps Nimbus JOSE+JWT to 9.9.
+    * Bumps JSON Smart to [1.3.3,2.4.6].
