--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1718,3 +1718,6 @@ version 9.4 (2021-04-21)
 version 9.4.1 (2021-04-26)
     * Bumps Nimbus JOSE+JWT to 9.9.
     * Bumps JSON Smart to [1.3.3,2.4.6].
+
+version 9.5 (2021-04-30)
+    * Adds URIUtils.toStringList(java.util.Collection<java.net.URI>) method.
