--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1720,4 +1720,6 @@ version 9.4.1 (2021-04-26)
     * Bumps JSON Smart to [1.3.3,2.4.6].
 
 version 9.5 (2021-04-30)
+    * Adds AuthorizationRequest.Builder.resource and
+      AuthenticationRequest.Builder.resource methods for single resource URI.
     * Adds URIUtils.toStringList(java.util.Collection<java.net.URI>) method.
