--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1728,3 +1728,8 @@ version 9.5.1 (2021-05-07)
     * Updates ClientMetadata code to stick to JSON Smart 1.3.x API.
     * Bumps Nimbus JOSE+JWT to 9.9.3.
     * Bumps JSON Smart to [1.3.3,2.4.7].
+
+version 9.5.2 (2021-05-19)
+    * Fixes bug introduced in 9.2.4 (2021-03-23) that allowed OpenID
+      authentication requests with response_type=id_token to pass without a
+      nonce (iss #363).
