--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1733,3 +1733,8 @@ version 9.5.2 (2021-05-19)
     * Fixes bug introduced in 9.2.4 (2021-03-23) that allowed OpenID
       authentication requests with response_type=id_token to pass without a
       nonce (iss #363).
+
+version 9.5.3 (2021-05-21)
+    * Fixes bug introduced in 9.2.4 (2021-03-23) that allowed OpenID
+      authentication requests with response_type=id_token token to pass without
+      a nonce (iss #363).
