--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1738,3 +1738,9 @@ version 9.5.3 (2021-05-21)
     * Fixes bug introduced in 9.2.4 (2021-03-23) that allowed OpenID
       authentication requests with response_type=id_token token to pass without
       a nonce (iss #363).
+
+version 9.6 (2021-05-22)
+    * ResponseType constants for each OAuth 2.0 and OpenID Connect response
+      type.
+    * Static Nonce.isRequired(ResponseType) method.
+
