--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1746,3 +1746,6 @@ version 9.6 (2021-05-22)
 
 version 9.7 (2021-05-22)
     * Adds SectorID(Audience) constructor.
+
+version 9.8 (2021-06-02)
+    * Adds SectorID(Identifier) constructor.
