--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1761,3 +1761,6 @@ version 9.9 (2021-06-07)
     * Adds SIVAESBasedPairwiseSubjectCodec option to pad local subjects.
       Intended as additional measure against leaking end-user information and
       hence correlation.
+
+version 9.9.1 (2021-07-03)
+    * Updates Nimbus JOSE+JWT to 9.10.1.
