Adds DPoP access token and token error classes

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1765,5 +1765,14 @@ version 9.9 (2021-06-07)
 version 9.9.1 (2021-07-03)
     * Updates Nimbus JOSE+JWT to 9.10.1.
 
-version 9.10 (2021-07-03)
+version 9.10 (2021-07-06)
+    * Adds DPoPAccessToken class.
+    * Adds DPoPTokenError class.
+    * Adds AccessTokenType.DPoP constant.
     * Adds OAuth2Error.INVALID_DPOP_PROOF constant.
+    * Adds AccessToken.parse(String,AccessTokenType), deprecating
+      AccessToken.parse(String).
+    * Removes deprecated BearerTokenError.isCodeWithValidChars.
+    * Removes deprecated BearerTokenError.isDescriptionWithValidChars.
+    * Factors out common Bearer and DPoP token error logic into a
+      TokenSchemeError class.
