--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1777,3 +1777,6 @@ version 9.10 (2021-07-06)
     * Factors out common Bearer and DPoP token error logic into a
       TokenSchemeError class.
     * Renames DPoPJWTFactory to DPoPProofFactory.
+    * Updates DPoPProofFactory to handle "ath" (access token hash) claim
+      computation.
+
