--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1788,4 +1788,6 @@ version 9.10 (2021-07-13)
     * Adds JWKThumbprintConfirmation class.
     * Adds JWK thumbprint confirmation support to
       TokenIntrospectionSuccessResponse.
+    * Adds new Tokens.getDPoPAccessToken method.
+
 
