--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1792,4 +1792,5 @@ version 9.10 (2021-07-14)
     * Makes com.github.stephenc.jcip:jcip-annotations:1.0-1 optional.
     * Updates to com.nimbusds:nimbus-jose-jwt:9.11.1
 
-
+version 9.10.1 (2021-07-15)
+    * Re-release due to Maven Central upload error.
