--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1794,3 +1794,7 @@ version 9.10 (2021-07-14)
 
 version 9.10.1 (2021-07-15)
     * Re-release due to Maven Central upload error.
+
+version 9.10.2 (2021-07-27)
+    * AuthorizationRequest.Builder(AuthorizationRequest) must copy the OpenID
+      Connect parameters in a AuthenticationRequest argument (iss #367).
