--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1827,3 +1827,6 @@ version 9.13 (2021-08-19)
       DPoP proof with InvalidDPoPProofException.
     * Simplifies DPoPCommonVerifier logic.
     * Updates to com.nimbusds:nimbus-jose-jwt:9.12.1
+
+version 9.14 (2021-08-19)
+    * Updates AccessTokenUtils.
