--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1829,5 +1829,6 @@ version 9.13 (2021-08-19)
     * Updates to com.nimbusds:nimbus-jose-jwt:9.12.1
 
 version 9.14 (2021-08-19)
+    * Updates UserInfoRequest to support DPoPAccessToken.
     * Adds static AccessToken.parse(HTTPRequest) method.
     * Updates AccessTokenUtils.
