--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1835,3 +1835,8 @@ version 9.14 (2021-08-19)
 
 version 9.14.1 (2021-08-19)
     * Fixes NPE in HTTPRequest.setDPoP.
+
+version 9.15 (2021-08-20)
+    * Updates UserInfoErrorResponse to handle DPoPTokenError.
+    * Makes TokenSchemeError public.
+
