--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1842,3 +1842,5 @@ version 9.15 (2021-08-20)
 
 version 9.16 (2021-09-21)
     * Adds support for OAuth 2.0 Token Exchange (RFC 8693).
+    * Adds missing serialVersionUID fields where required by the class
+      contract.
