--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1844,4 +1844,6 @@ version 9.16 (2021-09-21)
     * Adds support for OAuth 2.0 Token Exchange (RFC 8693).
     * Adds missing serialVersionUID fields where required by the class
       contract.
+    * Updates ServletUtils to work around non-compliant IPv6 address formatting
+      in Jetty for HttpServletRequest.getLocalAddr (iss #376).
     * Updates to com.nimbusds:nimbus-jose-jwt:9.14
