--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1873,8 +1873,9 @@ version 9.19 (2021-10-20)
     * Adds new StateHash.compute(AccessToken, JWSAlgorithm, Curve) method,
       deprecates the old method.
 
-version 9.20 (2021-10-31)
+version 9.20 (2021-11-01)
     * Upgrades to OpenID Connect for Identity Assurance 1.0, draft 12.
     * Adds support for the also_known_as OpenID claim.
     * Adds ISO3166_1Alpha2CountryCode class for representing ISO 3166-1 3
       letter country codes.
+    * Adds country_code claim to Address.
