--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1879,3 +1879,4 @@ version 9.20 (2021-11-01)
     * Adds ISO3166_1Alpha2CountryCode class for representing ISO 3166-1 3
       letter country codes.
     * Adds country_code claim to Address.
+    * Adds static StringUtils.isAlpha method.
