--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1876,8 +1876,9 @@ version 9.19 (2021-10-20)
 version 9.20 (2021-11-01)
     * Upgrades to OpenID Connect for Identity Assurance 1.0, draft 12.
     * Adds support for the also_known_as OpenID claim.
+    * Adds support for the msisdn OpenID claim.
     * Adds ISO3166_1Alpha2CountryCode class for representing ISO 3166-1 3
       letter country codes.
     * Adds CountryCode.length method.
     * Adds country_code claim to Address.
-    * Adds static StringUtils.isAlpha method.
+    * Adds static StringUtils.isAlpha and isNumeric methods.
