--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1881,6 +1881,8 @@ version 9.20 (2021-11-01)
       letter country codes.
     * Adds CountryCode.length method.
     * Adds country_code claim to Address.
+    * Updates IdentityVerification to support assurance_level and
+      assurance_process.
     * Adds IdentityAssuranceLevel class.
     * Adds IdentityAssuranceProcess class.
     * Adds Policy, Procedure and Status classes.
