Updates OIDCClientMetadata to allow any URI scheme in a frontchannel_logout_uri

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1872,3 +1872,7 @@ version 9.18 (2021-09-28)
 version 9.19 (2021-10-20)
     * Adds new StateHash.compute(AccessToken, JWSAlgorithm, Curve) method,
       deprecates the old method.
+
+version 9.20 (2021-11-25)
+    * Updates OIDCClientMetadata to allow any URI scheme in a
+      frontchannel_logout_uri. Previously only https and http was allowed.
