--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1873,7 +1873,7 @@ version 9.19 (2021-10-20)
     * Adds new StateHash.compute(AccessToken, JWSAlgorithm, Curve) method,
       deprecates the old method.
 
-version 9.20 (2021-12-25)
+version 9.20 (2021-12-26)
     * Upgrades to OpenID Connect for Identity Assurance 1.0, draft 12.
     * Adds support for the also_known_as OpenID claim.
     * Adds support for the msisdn OpenID claim.
@@ -1886,6 +1886,8 @@ version 9.20 (2021-12-25)
     * Adds IdentityAssuranceLevel class.
     * Adds IdentityAssuranceProcess class.
     * Adds Policy, Procedure and Status classes.
+    * Adds IdentityVerifier.getOrganizationString method, deprecates
+      IdentityVerifier.getOrganization.
     * Adds static StringUtils.isAlpha and isNumeric methods.
     * Adds static CollectionUtils.intersect method.
     * Adds ClaimsSet.equals and hashCode methods.
