--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1873,12 +1873,12 @@ version 9.19 (2021-10-20)
     * Adds new StateHash.compute(AccessToken, JWSAlgorithm, Curve) method,
       deprecates the old method.
 
-version 9.20 (2021-12-30)
+version 9.20 (2022-01-02)
     * Upgrades to OpenID Connect for Identity Assurance 1.0, draft 12.
     * Adds support for the also_known_as OpenID claim.
     * Adds support for the msisdn OpenID claim.
-    * Adds ISO3166_1Alpha2CountryCode class for representing ISO 3166-1 3
-      letter country codes.
+    * Adds ISO3166_1Alpha2CountryCode class for representing ISO 3166-1
+      3-letter country codes.
     * Adds CountryCode.length method.
     * Adds country_code claim to Address.
     * Updates IdentityVerification to support assurance_level and
@@ -1888,6 +1888,9 @@ version 9.20 (2021-12-30)
     * Adds Policy, Procedure and Status classes.
     * Adds IdentityVerifier.getOrganizationString method, deprecates
       IdentityVerifier.getOrganization.
+    * Adds Attachment classes for representing embedded and external
+      attachments for evidences, method for external attachment retrieval and
+      digest verification.
     * Updates OIDCProviderMetadata to support the documents_supported,
       documents_methods_supported, documents_validation_methods_supported,
       documents_verification_methods_supported, electronic_records_supported,
