--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1879,6 +1879,8 @@ version 9.20 (2022-01-02)
     * Adds support for the msisdn OpenID claim.
     * Adds ISO3166_1Alpha2CountryCode class for representing ISO 3166-1
       3-letter country codes.
+    * Adds ISO3166_3CountryCode class for representing ISO 3166-3 country
+      codes for former countries and territories.
     * Adds CountryCode.length method.
     * Adds country_code claim to Address.
     * Updates IdentityVerification to support assurance_level and
