Adds a shorthand ClaimsSetRequest.get(String) method

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1873,7 +1873,7 @@ version 9.19 (2021-10-20)
     * Adds new StateHash.compute(AccessToken, JWSAlgorithm, Curve) method,
       deprecates the old method.
 
-version 9.20 (2022-01-02)
+version 9.21 (2022-01-05)
     * Upgrades to OpenID Connect for Identity Assurance 1.0, draft 12.
     * Adds support for the also_known_as OpenID claim.
     * Adds support for the msisdn OpenID claim.
@@ -1893,6 +1893,7 @@ version 9.20 (2022-01-02)
     * Adds Attachment classes for representing embedded and external
       attachments for evidences, method for external attachment retrieval and
       digest verification.
+    * Adds a shorthand ClaimsSetRequest.get(String) method.
     * Updates OIDCProviderMetadata to support the documents_supported,
       documents_methods_supported, documents_validation_methods_supported,
       documents_verification_methods_supported, electronic_records_supported,
